edgedb-derive/tests/fail/enum.rs
use edgedb_derive::Queryable;

#[derive(Queryable)]
enum MyEnum {
    SomeValue,
    Option2,
}

fn main() {
}
