edgedb-derive/tests/fail/enum.stderr
error: expected `struct`
 --> $DIR/enum.rs:4:1
  |
4 | enum MyEnum {
  | ^^^^
